--- a/cloud-provider-payment/src/main/resources/application.yml
+++ b/cloud-provider-payment/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: org.gjt.mm.mysql.Driver
-    url: jdbc:mysql://localhost:3306/cloud?useUnicode=true&characterEncoding=utf&useSSL=false
+    url: jdbc:mysql://localhost:3306/cloud?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: root
 mybatis:
