--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
     <modules>
         <module>cloud-provider-payment</module>
         <module>cloud-consumer-order</module>
+        <module>cloud-api-commons</module>
+        <module>cloud-eureka-server7001</module>
+        <module>cloud-eureka-server7002</module>
+        <module>cloud-eureka-server-7002</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
