--- a/cloud-provider-payment-8002/src/main/resources/application.yml
+++ b/cloud-provider-payment-8002/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8001
+  port: 8002
 spring:
   application:
     name: cloud-provider-payment
@@ -17,4 +17,10 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:7001/eureka
+      #defaultZone: http://localhost:7001/eureka 单机版
+      defaultZone: http://peer2:7002/eureka,http://peer1:7001/eureka/  #集群版
+  instance:
+    instance-id: payment8002
+    prefer-ip-address: true
+    lease-renewal-interval-in-seconds: 1 #客户端向服务端发送心跳间隔
+    lease-expiration-duration-in-seconds: 2 #服务端收到最后一次心跳后的等待时间 超出剔除
