--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>cloud-eureka-server7001</module>
         <module>cloud-eureka-server7002</module>
         <module>cloud-eureka-server-7002</module>
+        <module>cloud-provider-payment-8002</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
