--- a/cloud-consumer-zk-order80/pom.xml
+++ b/cloud-consumer-zk-order80/pom.xml
@@ -10,17 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>coml.hr.cloud</groupId>
-    <artifactId>cloud-consumer-order</artifactId>
-
+    <artifactId>cloud-consumer-zk-order-80</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <artifactId>spring-cloud-starter-zookeeper-discovery</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.cloud</groupId>-->
-<!--            <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -28,10 +23,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -44,7 +35,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>coml.hr.cloud</groupId>
             <artifactId>cloud-api-commons</artifactId>
@@ -52,4 +47,5 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+
 </project>
