--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <module>cloud-eureka-server7002</module>
         <module>cloud-eureka-server-7002</module>
         <module>cloud-provider-payment-8002</module>
+        <module>cloud-provider-payment-8004</module>
+        <module>cloud-consumer-zk-order80</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
