--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>cloud-provider-payment-8002</module>
         <module>cloud-provider-payment-8004</module>
         <module>cloud-consumer-zk-order80</module>
+        <module>cloud-consumer-fegin-order-80</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
