--- a/cloud-provider-hystrix-payment-8001/pom.xml
+++ b/cloud-provider-hystrix-payment-8001/pom.xml
@@ -11,6 +11,12 @@
 
     <artifactId>cloud-provider-hystrix-payment-8001</artifactId>
 <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-hystrix -->
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+    </dependency>
+
     <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
