--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <module>cloud-consumer-fegin-order-80</module>
         <module>cloud-provider-hystrix-payment-8001</module>
         <module>cloud-consumer-feign-hystrix-order-80</module>
+        <module>cloud-consumer-hystrix-dashboard-9001</module>
+        <module>cloud-gateway-9527</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
