--- a/cloud-provider-payment-8002/src/main/resources/application.yml
+++ b/cloud-provider-payment-8002/src/main/resources/application.yml
@@ -17,8 +17,8 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      #defaultZone: http://localhost:7001/eureka 单机版
-      defaultZone: http://peer2:7002/eureka,http://peer1:7001/eureka/  #集群版
+      defaultZone: http://localhost:7001/eureka #单机版
+      #defaultZone: http://peer2:7002/eureka,http://peer1:7001/eureka/  #集群版
   instance:
     instance-id: payment8002
     prefer-ip-address: true
