--- a/cloud-gateway-9527/src/main/resources/application.yml
+++ b/cloud-gateway-9527/src/main/resources/application.yml
@@ -19,12 +19,16 @@ spring:
           #uri: http://localhost:8001 #服务地址
           uri: lb://cloud-provider-payment
           predicates:
-              Path=/payment/get/**
+            - Path=/payment/get/**
         - id: payment_routh2 #路由的id
           #uri: http://localhost:8001 #服务地址
           uri: lb://cloud-provider-payment
           predicates:
-              Path=/payment/lb/**
+            - Path=/payment/lb/**
+            - After=2020-03-11T13:12:18.263+08:00[Asia/Shanghai]
+            #- Cookie=username,zzyy 加入带cookie
+            #- Header=X-Request-Id, \d+ #值为整数的正则表达式
+
       discovery:
         locator:
           enabled: true #开启 动态路由 微服务名称
