--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <module>cloud-consumer-feign-hystrix-order-80</module>
         <module>cloud-consumer-hystrix-dashboard-9001</module>
         <module>cloud-gateway-9527</module>
+        <module>cloud-config-center-3344</module>
+        <module>cloud-config-center-3355</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
